--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/formio/formio.git"
+    "url": "git+https://github.com/leptoquark/formio-openshift.git"
   },
   "keywords": [
     "Form.io",
